Fix .aligncenter styles

--- a/wp-content/themes/theme/dev/src/sass/blocks/_text.scss
+++ b/wp-content/themes/theme/dev/src/sass/blocks/_text.scss
@@ -65,7 +65,6 @@
     clear: both;
     display: block;
     margin: .375em auto 1em;
-    margin-left: auto;
   }
 
   .alignright {
